fix: Remove extra margin on form section context text

--- a/styles.css
+++ b/styles.css
@@ -154,5 +154,7 @@ body {
 }
 
 .sing-up-form {
+  margin-left: var(--left-space);
+
   background-color: hsl(var(--color-hsl-white));
 }
